@@ -4,6 +4,7 @@ import core.UrlValidator;
 import exception.SubscriptionErrorType;
 import exception.SubscriptionException;
 import exception.UrlValidationException;
+import exception.UrlValidationErrorType;
 import lombok.extern.slf4j.Slf4j;
 import model.ResourceType;
 import model.entity.AppUser;
@@ -26,8 +27,8 @@ import static service.MessageName.*;
 @Service
 public class SubscriptionService implements SubscriptionServiceInterface {
 
-    private final SendMessageInterface sendMessageService;
     private final SubscriptionRepository subscriptionRepository;
+    private final SendMessageInterface sendMessageService;
     private final AppUserRepository appUserRepository;
     private final LinkRepository linkRepository;
 
@@ -49,37 +50,46 @@ public class SubscriptionService implements SubscriptionServiceInterface {
             String url = UrlValidator.getUrlOrThrow(message);
             ResourceType type = UrlValidator.detectSource(url);
 
-            Optional<Subscription> existingSub = subscriptionRepository.findByUser_ChatIdAndLink_Url(chatId, url);
+            Optional<Subscription> existingSub =
+                    subscriptionRepository.findByUser_ChatIdAndLink_Url(chatId, url);
             if (existingSub.isPresent()) {
                 log.warn("Попытка добавить уже существующую подписку для chatId = {}, url = {}", chatId, url);
-                throw new SubscriptionException(SubscriptionErrorType.DUPLICATE, DUPLICATE_MESSAGE.getMessageName());
+                throw new SubscriptionException(SubscriptionErrorType.DUPLICATE,
+                        DUPLICATE_MESSAGE.getMessageName());
             }
-            AppUser user = appUserRepository.findByChatId(chatId).
-                    orElseGet(() -> appUserRepository.save(new AppUser(chatId)));
 
-            Link link = linkRepository.findByUrl(url).
-                    orElseGet(() -> linkRepository.save(new Link(url, type)));
+            AppUser user = appUserRepository.findByChatId(chatId)
+                    .orElseGet(() -> {
+                        log.info("Новый пользователь, сохраняем chatId = {}", chatId);
+                        return appUserRepository.save(new AppUser(chatId));
+                    });
 
-            Subscription newSubscription = new Subscription(user, link);
-            subscriptionRepository.save(newSubscription);
+            Link link = linkRepository.findByUrl(url)
+                    .orElseGet(() -> {
+                        log.info("Новая ссылка, сохраняем url = {}", url);
+                        return linkRepository.save(new Link(url, type));
+                    });
+
+            Subscription newSub = new Subscription(user, link);
+            subscriptionRepository.save(newSub);
             sendMessageService.sendMessage(chatId, TRACK_MESSAGE.getMessageName());
             log.info("Подписка успешно добавлена для chatId = {}, url = {}", chatId, url);
 
         } catch (UrlValidationException e) {
             log.warn("Ошибка валидации URL для chatId = {}: {}", chatId, e.getMessage());
-            switch (e.getErrorType()) {
-                case NO_URL -> sendMessageService.sendMessage(chatId, NO_URL_MESSAGE.getMessageName());
-                case INVALID_URL -> sendMessageService.sendMessage(chatId, NO_VALID_URL.getMessageName());
+            if (e.getErrorType() == UrlValidationErrorType.NO_URL) {
+                sendMessageService.sendMessage(chatId, NO_URL_MESSAGE.getMessageName());
+            } else if (e.getErrorType() == UrlValidationErrorType.INVALID_URL) {
+                sendMessageService.sendMessage(chatId, NO_VALID_URL.getMessageName());
             }
         } catch (SubscriptionException e) {
             log.warn("Ошибка подписки для chatId = {}: {}", chatId, e.getMessage());
-            switch (e.getErrorType()) {
-                case DUPLICATE ->
-                        sendMessageService.sendMessage(chatId, DUPLICATE_MESSAGE.getMessageName());
-                case NO_URL ->
-                        sendMessageService.sendMessage(chatId, NO_VALID_URL.getMessageName());
-                case NO_SUBS ->
-                        sendMessageService.sendMessage(chatId, NO_SUBS_MESSAGE.getMessageName());
+            if (e.getErrorType() == SubscriptionErrorType.DUPLICATE) {
+                sendMessageService.sendMessage(chatId, DUPLICATE_MESSAGE.getMessageName());
+            } else if (e.getErrorType() == SubscriptionErrorType.NO_SUBS) {
+                sendMessageService.sendMessage(chatId, NO_SUBS_MESSAGE.getMessageName());
+            } else {
+                sendMessageService.sendMessage(chatId, e.getMessage());
             }
         }
     }
@@ -89,7 +99,8 @@ public class SubscriptionService implements SubscriptionServiceInterface {
         log.info("Запрос на удаление подписки для chatId = {}", chatId);
         try {
             String url = UrlValidator.getUrlOrThrow(message);
-            Optional<Subscription> subscriptionOpt = subscriptionRepository.findByUser_ChatIdAndLink_Url(chatId, url);
+            Optional<Subscription> subscriptionOpt =
+                    subscriptionRepository.findByUser_ChatIdAndLink_Url(chatId, url);
             if (subscriptionOpt.isPresent()) {
                 subscriptionRepository.delete(subscriptionOpt.get());
                 sendMessageService.sendMessage(chatId, UNTRACK_MESSAGE.getMessageName());
@@ -99,18 +110,18 @@ public class SubscriptionService implements SubscriptionServiceInterface {
                 log.info("Подписка на url = {} для chatId = {} не найдена.", url, chatId);
             }
         } catch (UrlValidationException e) {
-            log.warn("Ошибка валидации URL при удалении подписки для chatId = {}: {}", chatId, e.getMessage());
-            switch (e.getErrorType()) {
-                case NO_URL -> sendMessageService.sendMessage(chatId, NO_URL_MESSAGE.getMessageName());
-                case INVALID_URL -> sendMessageService.sendMessage(chatId, NO_VALID_URL.getMessageName());
+            log.warn("Ошибка валидации URL при удалении для chatId = {}: {}", chatId, e.getMessage());
+            if (e.getErrorType() == UrlValidationErrorType.NO_URL) {
+                sendMessageService.sendMessage(chatId, NO_URL_MESSAGE.getMessageName());
+            } else if (e.getErrorType() == UrlValidationErrorType.INVALID_URL) {
+                sendMessageService.sendMessage(chatId, NO_VALID_URL.getMessageName());
             }
         } catch (SubscriptionException e) {
             log.warn("Ошибка подписки при удалении для chatId = {}: {}", chatId, e.getMessage());
-            switch (e.getErrorType()) {
-                case NO_SUBS ->
-                        sendMessageService.sendMessage(chatId, NO_SUBS_MESSAGE.getMessageName());
-                case NO_URL ->
-                        sendMessageService.sendMessage(chatId, NO_SUCH_URL.getMessageName());
+            if (e.getErrorType() == SubscriptionErrorType.NO_SUBS) {
+                sendMessageService.sendMessage(chatId, NO_SUBS_MESSAGE.getMessageName());
+            } else {
+                sendMessageService.sendMessage(chatId, e.getMessage());
             }
         }
     }
@@ -124,11 +135,18 @@ public class SubscriptionService implements SubscriptionServiceInterface {
             log.info("У пользователя с chatId = {} нет активных подписок.", chatId);
             return;
         }
-
         List<String> urls = subscriptions.stream()
                 .map(sub -> sub.getLink().getUrl())
-                .toList();
+                .collect(Collectors.toList());
         sendMessageService.sendSubscriptions(chatId, urls);
-        log.info("Список подписок отправлен пользователю с chatId = {} ({} подписок).", chatId, urls.size());
+        log.info("Список подписок отправлен пользователю с chatId = {} ({} подписок).",
+                chatId, urls.size());
+    }
+
+    public List<String> getSubscriptionUrls(String chatId) {
+        log.info("Получение URL-ов подписок для chatId = {}", chatId);
+        return subscriptionRepository.findByUser_ChatId(chatId).stream()
+                .map(s -> s.getLink().getUrl())
+                .collect(Collectors.toList());
     }
 }
